added data source support

--- a/EmployeeDataManager/EmployeeDataManager.csproj
+++ b/EmployeeDataManager/EmployeeDataManager.csproj
@@ -77,6 +77,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Contracts\IEmployeeDataManager.cs" />
     <Compile Include="Controllers\EmployeeDataController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
