updated complete functional requirements of the api

--- a/EmployeeDataManager/Web.config
+++ b/EmployeeDataManager/Web.config
@@ -4,6 +4,9 @@
   http://go.microsoft.com/fwlink/?LinkId=301879
   -->
 <configuration>
+  <connectionStrings>
+    <add name="dbcs" />
+  </connectionStrings>
   <appSettings>
   </appSettings>
   <system.web>
